--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -96,7 +96,7 @@
           <string>Clone</string>
          </property>
          <property name="icon">
-          <iconset resource="../resources.qrc">
+          <iconset resource="resources/resources.qrc">
            <normaloff>:/image/clone.svg</normaloff>:/image/clone.svg</iconset>
          </property>
          <property name="iconSize">
@@ -131,7 +131,7 @@
           <string>Fetch</string>
          </property>
          <property name="icon">
-          <iconset resource="../resources.qrc">
+          <iconset resource="resources/resources.qrc">
            <normaloff>:/image/fetch.svg</normaloff>:/image/fetch.svg</iconset>
          </property>
          <property name="iconSize">
@@ -166,7 +166,7 @@
           <string>Pull</string>
          </property>
          <property name="icon">
-          <iconset resource="../resources.qrc">
+          <iconset resource="resources/resources.qrc">
            <normaloff>:/image/pull.svg</normaloff>:/image/pull.svg</iconset>
          </property>
          <property name="iconSize">
@@ -201,7 +201,7 @@
           <string>Push</string>
          </property>
          <property name="icon">
-          <iconset resource="../resources.qrc">
+          <iconset resource="resources/resources.qrc">
            <normaloff>:/image/push.svg</normaloff>:/image/push.svg</iconset>
          </property>
          <property name="iconSize">
@@ -252,7 +252,7 @@
           <string>Terminal</string>
          </property>
          <property name="icon">
-          <iconset resource="../resources.qrc">
+          <iconset resource="resources/resources.qrc">
            <normaloff>:/image/terminal.svg</normaloff>:/image/terminal.svg</iconset>
          </property>
          <property name="iconSize">
@@ -287,7 +287,7 @@
           <string>Explorer</string>
          </property>
          <property name="icon">
-          <iconset resource="../resources.qrc">
+          <iconset resource="resources/resources.qrc">
            <normaloff>:/image/explorer.svg</normaloff>:/image/explorer.svg</iconset>
          </property>
          <property name="iconSize">
@@ -762,7 +762,7 @@
                   <string>Unstage</string>
                  </property>
                  <property name="icon">
-                  <iconset resource="../resources.qrc">
+                  <iconset resource="resources/resources.qrc">
                    <normaloff>:/image/unstage.svg</normaloff>:/image/unstage.svg</iconset>
                  </property>
                  <property name="iconSize">
@@ -791,7 +791,7 @@
                   <string>Select all</string>
                  </property>
                  <property name="icon">
-                  <iconset resource="../resources.qrc">
+                  <iconset resource="resources/resources.qrc">
                    <normaloff>:/image/selall.svg</normaloff>:/image/selall.svg</iconset>
                  </property>
                  <property name="iconSize">
@@ -826,7 +826,7 @@
                   <string>Stage</string>
                  </property>
                  <property name="icon">
-                  <iconset resource="../resources.qrc">
+                  <iconset resource="resources/resources.qrc">
                    <normaloff>:/image/stage.svg</normaloff>:/image/stage.svg</iconset>
                  </property>
                  <property name="iconSize">
@@ -855,7 +855,7 @@
                   <string>Commit</string>
                  </property>
                  <property name="icon">
-                  <iconset resource="../resources.qrc">
+                  <iconset resource="resources/resources.qrc">
                    <normaloff>:/image/commit.svg</normaloff>:/image/commit.svg</iconset>
                  </property>
                  <property name="iconSize">
@@ -1028,6 +1028,7 @@
      <string>&amp;Repository</string>
     </property>
     <addaction name="action_fetch"/>
+    <addaction name="action_fetch_prune"/>
     <addaction name="action_commit"/>
     <addaction name="action_pull"/>
     <addaction name="action_push"/>
@@ -1155,7 +1156,7 @@
               <string/>
              </property>
              <property name="icon">
-              <iconset resource="../resources.qrc">
+              <iconset resource="resources/resources.qrc">
                <normaloff>:/image/redsquare.svg</normaloff>:/image/redsquare.svg</iconset>
              </property>
              <property name="iconSize">
@@ -1259,7 +1260,7 @@
   </action>
   <action name="action_commit">
    <property name="icon">
-    <iconset resource="../resources.qrc">
+    <iconset resource="resources/resources.qrc">
      <normaloff>:/image/commit.svg</normaloff>:/image/commit.svg</iconset>
    </property>
    <property name="text">
@@ -1268,7 +1269,7 @@
   </action>
   <action name="action_push">
    <property name="icon">
-    <iconset resource="../resources.qrc">
+    <iconset resource="resources/resources.qrc">
      <normaloff>:/image/push.svg</normaloff>:/image/push.svg</iconset>
    </property>
    <property name="text">
@@ -1288,7 +1289,7 @@
   </action>
   <action name="action_pull">
    <property name="icon">
-    <iconset resource="../resources.qrc">
+    <iconset resource="resources/resources.qrc">
      <normaloff>:/image/pull.svg</normaloff>:/image/pull.svg</iconset>
    </property>
    <property name="text">
@@ -1297,7 +1298,7 @@
   </action>
   <action name="action_fetch">
    <property name="icon">
-    <iconset resource="../resources.qrc">
+    <iconset resource="resources/resources.qrc">
      <normaloff>:/image/fetch.svg</normaloff>:/image/fetch.svg</iconset>
    </property>
    <property name="text">
@@ -1332,7 +1333,7 @@
   </action>
   <action name="action_clone">
    <property name="icon">
-    <iconset resource="../resources.qrc">
+    <iconset resource="resources/resources.qrc">
      <normaloff>:/image/clone.svg</normaloff>:/image/clone.svg</iconset>
    </property>
    <property name="text">
@@ -1408,7 +1409,7 @@
   </action>
   <action name="action_stop_process">
    <property name="icon">
-    <iconset resource="../resources.qrc">
+    <iconset resource="resources/resources.qrc">
      <normaloff>:/image/redsquare.svg</normaloff>:/image/redsquare.svg</iconset>
    </property>
    <property name="text">
@@ -1449,6 +1450,11 @@
   <action name="action_rebase_onto">
    <property name="text">
     <string>rebase onto</string>
+   </property>
+  </action>
+  <action name="action_fetch_prune">
+   <property name="text">
+    <string>Fetch --prune</string>
    </property>
   </action>
  </widget>
@@ -1512,7 +1518,7 @@
   <tabstop>widget_diff_view</tabstop>
  </tabstops>
  <resources>
-  <include location="../resources.qrc"/>
+  <include location="resources/resources.qrc"/>
  </resources>
  <connections/>
 </ui>
