--- a/src/FileDiffWidget.ui
+++ b/src/FileDiffWidget.ui
@@ -103,10 +103,18 @@
         </widget>
        </item>
        <item row="0" column="2">
-        <widget class="FileViewWidget" name="widget_diff_right" native="true"/>
+        <widget class="FileViewWidget" name="widget_diff_right" native="true">
+         <property name="focusPolicy">
+          <enum>Qt::NoFocus</enum>
+         </property>
+        </widget>
        </item>
        <item row="0" column="1">
-        <widget class="FileViewWidget" name="widget_diff_left" native="true"/>
+        <widget class="FileViewWidget" name="widget_diff_left" native="true">
+         <property name="focusPolicy">
+          <enum>Qt::NoFocus</enum>
+         </property>
+        </widget>
        </item>
        <item row="0" column="0">
         <widget class="FileDiffSliderWidget" name="widget_diff_slider" native="true">
@@ -123,7 +131,7 @@
           </size>
          </property>
          <property name="focusPolicy">
-          <enum>Qt::StrongFocus</enum>
+          <enum>Qt::NoFocus</enum>
          </property>
         </widget>
        </item>
@@ -140,6 +148,9 @@
            <width>16</width>
            <height>16</height>
           </size>
+         </property>
+         <property name="focusPolicy">
+          <enum>Qt::NoFocus</enum>
          </property>
          <property name="text">
           <string/>
