--- a/src/AboutDialog.ui
+++ b/src/AboutDialog.ui
@@ -16,15 +16,20 @@
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>190</y>
-     <width>181</width>
-     <height>68</height>
+     <x>200</x>
+     <y>170</y>
+     <width>191</width>
+     <height>91</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <widget class="QLabel" name="label_title">
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
       <property name="text">
        <string>TextLabel</string>
       </property>
@@ -32,6 +37,11 @@
     </item>
     <item>
      <widget class="QLabel" name="label_copyright">
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
       <property name="text">
        <string>TextLabel</string>
       </property>
@@ -39,6 +49,11 @@
     </item>
     <item>
      <widget class="QLabel" name="label_twitter">
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
       <property name="text">
        <string>TextLabel</string>
       </property>
@@ -46,6 +61,11 @@
     </item>
     <item>
      <widget class="QLabel" name="label_qt">
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
       <property name="text">
        <string>TextLabel</string>
       </property>
