コミットログのテキスト検索機能

--- a/src/CommitExploreWindow.ui
+++ b/src/CommitExploreWindow.ui
@@ -32,7 +32,7 @@
    <item>
     <widget class="QFrame" name="frame_2">
      <property name="frameShape">
-      <enum>QFrame::StyledPanel</enum>
+      <enum>QFrame::NoFrame</enum>
      </property>
      <property name="frameShadow">
       <enum>QFrame::Raised</enum>
