ファイルリストのバッジにアイコンを描画

--- a/src/resources/resources.qrc
+++ b/src/resources/resources.qrc
@@ -39,7 +39,12 @@
         <file>image/signature-bad.png</file>
         <file>image/signature-dubious.png</file>
         <file>image/signature-good.png</file>
-	<file>translations/Guitar_ja.qm</file>
-  	<file>translations/Guitar_ru.qm</file>
+        <file>translations/Guitar_ja.qm</file>
+        <file>translations/Guitar_ru.qm</file>
+        <file>image/add.svg</file>
+        <file>image/chg.svg</file>
+        <file>image/del.svg</file>
+        <file>image/ren.svg</file>
+        <file>image/cpy.svg</file>
     </qresource>
 </RCC>
