リモートリポジトリURL検証の問題を修正

--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -1015,7 +1015,7 @@
      <x>0</x>
      <y>0</y>
      <width>848</width>
-     <height>22</height>
+     <height>18</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -1072,6 +1072,7 @@
      </property>
      <addaction name="action_stash"/>
      <addaction name="action_stash_apply"/>
+     <addaction name="separator"/>
      <addaction name="action_stash_drop"/>
     </widget>
     <addaction name="action_repository_status"/>
